fix header not showing

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,32 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@600;700&family=Poppins:wght@500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@600;700&family=Poppins:wght@500&display=swap"); */
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
+} */
 
 :root {
   --main-color: rgb(228, 145, 37);
   --color-4: #4b6587;
 }
 
-html {
+/* html {
   font-size: 10px;
-}
+} */
 
-header {
+/* header {
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-}
+} */
 
-.container6 {
+/* .container6 {
   width: 100%;
   margin: 0 auto;
-}
+} */
 
 .menu-icons {
   display: none;
@@ -46,7 +46,7 @@ header {
   z-index: 1500;
 }
 
-nav {
+/* nav {
   width: 100%;
   border-radius: 1px solid #4b6587;
   -webkit-border-radius: 1px solid #4b6587;
@@ -59,30 +59,30 @@ nav {
   background: #0c5e69;
   justify-content: center;
   gap: 2rem;
-}
+} */
 
-.logo {
+/* .logo {
   display: inline;
   margin-right: 70rem;
-}
+} */
 
-.logo-img {
-  max-width: 130px; /* Sesuaikan lebar maksimum logo */
+/* .logo-img {
+  max-width: 130px; 
   height: auto;
   margin-top: 10px;
-}
+} */
 
 .nav-list {
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   list-style: none;
 }
 
-.nav-list li {
+/* .nav-list li {
   line-height: 8rem;
   position: relative;
   list-style: none;
-}
+} */
 
 .sub-menu li {
   line-height: 4rem;
@@ -90,9 +90,9 @@ nav {
 }
 
 .nav-list a {
-  display: block;
+  /* display: block; */
   color: #e6e7eb;
-  padding: 0 1.5rem;
+  /* padding: 0 1.5rem; */
   font-size: 1.4rem;
   text-transform: uppercase;
   transition: color 650ms;
@@ -100,9 +100,9 @@ nav {
   -moz-transition: color 650ms;
   -ms-transition: color 650ms;
   -o-transition: color 650ms;
-  position: relative;
-  width: 100%;
-  align-items: center;
+  /* position: relative; */
+  /* width: 100%; */
+  /* align-items: center; */
   text-decoration: none;
 }
 
@@ -110,7 +110,7 @@ nav {
   color: var(--main-color);
 }
 
-.btn {
+/* .custom-btn {
   padding: 1.3rem;
   display: inline-block;
   border: 2px solid var(--main-color);
@@ -124,11 +124,11 @@ nav {
   -moz-transition: background-color 650ms;
   -ms-transition: background-color 650ms;
   -o-transition: background-color 650ms;
-}
+} */
 
-.btn:hover {
+/* .custom-btn:hover {
   color: var(--main-color);
-}
+} */
 
 .sub-menu {
   width: 20rem;
